@@ -1,5 +1,5 @@
 Name: panther_launcher
-Version: 1.1.0
+Version: 1.1.1
 Release: 1
 License: Unknown/not set
 Summary: A fork from Slingshot Launcher. Its main change is that it doesn't depend on Gala, Granite or other libraries not available in regular linux distros. It also has been ported to Autovala, allowing an easier build. Finally, it also has an applet for Gnome Flashback and an extension for Gnome Shell, allowing to use it from these desktops.
