@@ -1,3 +1,9 @@
+panther_launcher (1.1.1-Debian1) sid; urgency=low
+
+  * Changes made
+
+ -- Sergio Costas <rastersoft@gmail.com>  Wed, 24 Sep 2015 20:49:03 +0200
+
 panther_launcher (1.1.0-Debian1) sid; urgency=low
 
   * Changes made
